Se añade instalación de npm para el despliegue

--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -38,3 +38,5 @@ jobs:
             cd develop/
             sudo -u www-data composer install
             bin/console cache:clear --env=prod
+            npm install
+            npm run dev
