--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "bootstrap": "^5.3.3",
         "core-js": "^3.23.0",
         "jquery": "^3.7.1",
-        "node-sass": "^9.0.0",
         "regenerator-runtime": "^0.13.9",
         "sass-loader": "^14.2.1",
         "webpack": "^5.74.0",
@@ -26,6 +25,7 @@
         "@canvasjs/charts": "^3.8.5",
         "@canvasjs/stockcharts": "^1.8.5",
         "bootstrap-icons": "^1.11.3",
-        "jquery-ui": "^1.13.3"
+        "jquery-ui": "^1.13.3",
+        "sass": "^1.80.4"
     }
 }
