Se añade instalación de npm para el despliegue

--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ GROUP_ID=1000
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:root@finviz-mysql:3306/finviz?serverVersion=8.0.33&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@localhost:3306/finviz?serverVersion=8.0.33&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
