cambios en .env

--- a/.env
+++ b/.env
@@ -38,10 +38,10 @@ DATABASE_URL="mysql://root:root@localhost:3306/finviz?serverVersion=8.0.33&chars
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbitmq:5672/%2f/messages?connection_timeout=1000&heartbeat=0
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages?connection_timeout=1000&heartbeat=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://laliga-mail:1025
 ###< symfony/mailer ###
-ELASTICSEARCH_HOST=http://elasticsearch:9200
+ELASTICSEARCH_HOST=http://localhost:9200
