cambios en .env

--- a/.env
+++ b/.env
@@ -45,3 +45,5 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages?connectio
 MAILER_DSN=smtp://laliga-mail:1025
 ###< symfony/mailer ###
 ELASTICSEARCH_HOST=http://localhost:9200
+ELASTICSEARCH_USER=
+ELASTICSEARCH_PASSWORD=
