cambios en .env

--- a/.env
+++ b/.env
@@ -47,3 +47,4 @@ MAILER_DSN=smtp://laliga-mail:1025
 ELASTICSEARCH_HOST=http://localhost:9200
 ELASTICSEARCH_USER=
 ELASTICSEARCH_PASSWORD=
+ELASTICSEARCH_SSL_VERIFICATION=false
