--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ services:
             $elasticsearchHost: '%env(ELASTICSEARCH_HOST)%'
             $elasticsearchUser: '%env(ELASTICSEARCH_USER)%'
             $elasticsearchPassword: '%env(ELASTICSEARCH_PASSWORD)%'
+            $elasticsearchSslVerification: '%env(ELASTICSEARCH_SSL_VERIFICATION)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
