--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -8,11 +8,12 @@ framework:
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
             async:
-                dsn: '%env(MESSENGER_TRANSPORT_DSN_FINVIZ)%'
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
 
         routing:
              #Route your messages to the transports
             'App\Message\AddInformationStockMessage': async
+            'App\Message\AddStatisticsElasticsearchMessage': async
 
 # when@test:
 #    framework:
