--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -8,7 +8,7 @@ framework:
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
             async:
-                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                dsn: '%env(MESSENGER_TRANSPORT_DSN_FINVIZ)%'
 
         routing:
              #Route your messages to the transports
